# Jala

./: LICENSE  Readme.md  jala  jala-daemon  pyproject.toml
api/: api_server.py
core/: __main__.py  client.py  env_config.py  neutral_terminal.py
docs/: interactive-terminal-agent-architecture.md  true-terminal-agent-plan.md
tests/: test_all.py
